Mobile z-index issue

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -75,6 +75,7 @@ h1{
 	span{
 		font-size:2.9em;
 		letter-spacing:-.12em;
+		z-index:110;
 	}
 	
 	@media screen and (max-width:640px){
